# MikeCheck

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUTHENTICATION_RATELIMIT.md  CHANGELOG.md  DEPENDENCY_AUDIT.md  DEPENDENCY_MANAGEMENT.md  DEPLOYMENT.md  Dockerfile  GRACEFUL_SHUTDOWN.md  ML_CLASSIFIER_FEATURE.md  MONITORING.md  OPERATIONS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION.md  PHASE1_DEPLOYMENT_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  README.md  SECRETS_MANAGEMENT.md  SLO_SLI_ALERTING.md  TEST_ADDITIONS_SUMMARY.md  TEST_GENERATION_SUMMARY.md  TOOL-REFERENCE-GUIDE.md  UNIT_TESTS_GENERATED.md  docker-compose.yml  pyproject.toml
.Jules/: bolt.md  palette.md  sentinel.md
.github/: dependabot.yml
.github/workflows/: ci.yml  integration-tests.yml
.jules/: bolt.md  sentinel.md
app/: api.py  auth.py  cache.py  config.py  errors.py  logging_config.py  logging_utils.py  management.py  mcp_client.py  metrics.py  rate_limiting.py  server.py  types.py
app/analysis/: circuit_analyzer.py  citation_network.py  court_mapper.py  deep_shepard.py  document_processing.py  issue_discovery.py  mermaid_generator.py  ml_classifier.py  quote_matcher.py  treatment_classifier.py
app/static/: app.js  index.html  style.css
app/templates/: index.html
app/tools/: cache_tools.py  jurisdiction.py  network.py  research.py  search.py  treatment.py  verification.py
frontend/: ideas.md  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/client/: README.md  index.html
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  secret.yaml.example  service.yaml  servicemonitor.yaml
tests/: conftest.py  test_api_response.py  test_case_lookup.py  test_citation_network.py  test_logging.py  test_manual_scenarios.py  test_mcp_client.py  test_mcp_client_resilience.py  test_mermaid_generator.py  test_network_tools.py  test_search_tool.py  test_visualization.py
tests/benchmarks/: benchmark_classifier.py
tests/integration/: test_caching.py  test_research_workflows.py
tests/unit/: test_api_security.py  test_auth.py  test_cache_manager.py  test_cache_tools.py  test_document_processing.py  test_footnote_parser.py  test_footnote_treatment.py  test_management_cli.py  test_network_tools.py  test_quote_matcher.py  test_research_import.py  test_treatment_classifier.py  test_treatment_enhancements.py  (+2 more)
(+28 files in other folders)
