[project]
name = "legal-research-assistant-mcp"
version = "0.1.0"
description = "Advanced legal research MCP with treatment analysis, citation networks, and quote verification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.3.0",
    "httpx>=0.27.0,<0.29",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.2",
    "typing-extensions>=4.9.0",
    "optimum[onnxruntime]>=1.16.0",
    "transformers>=4.36.0",
    "chromadb>=1.3.5",
    "diskcache>=5.6.3",
    "tenacity>=9.0.0",
    "fastapi>=0.109.0,<0.116",
    "uvicorn>=0.27.0,<0.35",
    "python-multipart>=0.0.9",
    "pypdf>=4.0.0",
    "jinja2>=3.1.3",
    "python-dateutil>=2.8.2",
    "slowapi>=0.1.9",  # Rate limiting for FastAPI
    "scipy>=1.10.0",
]

[project.scripts]
legal-research-mcp = "app.server:cli"

[project.optional-dependencies]
monitoring = [
    "prometheus-client>=0.17.0",  # Prometheus metrics
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.15.1",
    "respx>=0.21.1",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "prometheus-client>=0.17.0",  # For testing metrics
]

# This group is for 'uv sync --dev'. It must be kept in sync with
# [project.optional-dependencies].dev for 'pip install .[dev]' compatibility.
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.15.1",
    "respx>=0.21.1",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "prometheus-client>=0.17.0",  # For testing metrics
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
allow_untyped_decorators = true

[[tool.mypy.overrides]]
module = ["fastmcp", "fastmcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.tools.network"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast-running unit tests",
    "integration: slower integration or end-to-end tests",
]
